# BPView

./: .project  AUTHORS  Makefile.am  README  README.md  VENDORS  autogen.sh  bpview.pl  bpview.rh6.init  bpview.spec  bpviewd.service  configure.ac  index.html  params.json  project
Roadmap/: BPView.uml
cgi/: Makefile.am  bpview.pl  index.pl
docs/: BPView - The_Project.odp  Config.pm.html  Editor_Mokup.indd  Thumbs.db  architecture_new.dia  bpview_db_model.mwb
docs/modules/: BP.html  BPWriter.html  Config.html  Data.html  Operations.html  Web.html
docs/sample_files/: bp-addon-sample-config
docs/screenshots/: Thumbs.db
etc/: .gitignore  Makefile.am  bp-addon.cfg  bpview.conf  bpview.yaml  bpview.yml  bpviewd.yml  datasource.yml  ido.yaml  mappings.yml
etc/bp-config/: environment-topic-product.yml  environment-topic-product2.yml  environment-topic-product3.yml  example.yml
etc/icinga/bpview/: bpview_templates.cfg
etc/views/: example.yaml  example.yml  ovido.yml
lib/: Makefile.am
lib/BPView/: BP.pm  BPWriter.pm  Config.pm  Daemon.pm  Data.pm  Globals.pm  Operations.pm  ReadConfig.pm  Web.pm
lib/BPView/BP-Addon/: nagiosBp.pm  ndodb.pm
lib/BPView/BPAddon/: ndodb.pm
lib/BPView/Config/: IDO.pm  Livestatus.pm  ReadConfig.pm
lib/BPView/Plugins/: IDO.pm  Livestatus.pm
lib/Monitoring/: GPL.LICENSE
log/: Makefile.am
sample-config/: bpview_businessprocesses.cfg  bpview_templates.cfg  client.pl  httpd.conf  nagios-bp.cfg  nagios-bp.conf  startup.pl  sudoers
sample-config/bpview_generated/: bpview.conf  env-topic-product_and.yml  env-topic-product_min.yml  env-topic-product_or.yml
selinux/: bpview.fc  bpview.te
selinux/f21/: bpview.fc  bpview.te
selinux/rh6/: bpview.fc  bpview.te
share/: Makefile.am
share/css/default/: bpview.css  presentation-screen.css  status.css
share/css/global/: jquery.toastmessage.css
share/images/global/: Thumbs.db
share/javascript/: bpview.js  jQuery.LICENSE  jquery-templates-1.0.3.js  magnific-pupup.js  reload.js
share/src/global/: about.tt  footer.tt  iframe.tt  main.tt  main_footer.tt  main_header.tt
share/src/global/menu/: css.tt  dashboards.tt  filters.tt  help.tt  menu.tt  search.tt
src/global/: footer.tt  header.tt  main.tt
tools/: pod.pl
